# gpt4all

./: AI_INTEGRATION_REQUIREMENTS.cpp  API_CAPABILITY_REVIEW.md  APP_FIX_SUCCESS.md  CMakeLists.txt  CMakeLists_simple.txt  COMPLETE_AI_INTEGRATION_SUMMARY.md  COMPLETE_AI_REQUIREMENTS.md  COMPREHENSIVE_SERVER_REVIEW.md  ENDPOINT_MAPPING.md  ENHANCED_AI_SERVER_FIXES.md  ENHANCED_API_SERVER_COMPLETE.md  FEATURES_ANALYSIS.md  FINAL_API_ASSESSMENT.md  GPT4All.desktop  PRODUCTION_READINESS_REPORT.md  QT62_COMPATIBILITY_FIX.md  SUCCESS_SUMMARY.md  enhanced_ai_cmake.txt  enhanced_ai_server.cpp  enhanced_ai_server.h  enhanced_ai_server_app.cpp  enhanced_ai_server_cmake.txt  enhanced_ai_server_fixed.cpp  enhanced_ai_server_fixed.h  gpt4all_server.cpp  launch_gpt4all.sh  minimal_ai_integration_summary.sh  minimal_simpleserver.cpp  minimal_simpleserver.h  package.json  real_ai_simple_server.cpp  real_ai_simple_server.h  standalone_enhanced_ai_server.cpp  test_api_server.py  test_backend  test_backend.cpp  test_complete_api_server.sh  test_enhanced_ai_server.sh  test_node_integration.js  test_python_integration.py  (+4 more)
gpt4all-backend/: llama.cpp.cmake
gpt4all-chat/: CMakeLists.txt  main.qml  test_simpleserver  test_simpleserver.cpp
gpt4all-chat/qml/: MyFolderDialog.qml  MySettingsStack.qml  SettingsView.qml
simple_test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  final_test.sh  gpt4all_server  test_missing_functionality.sh  test_simpleserver
simple_test/gpt4all_server_autogen/: deps
simple_test/test_simpleserver_autogen/: deps  moc_predefs.h
(+49 files in other folders)
